--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				<h3 class="text-white section-title element-anim lng-last-projects">Last Projects</h3>
 				<div class="project-cards">
 					<div class="row row-cols-2">
-						<a href="#"><div class="card-example image rounded element-anim"><img src="img/project-apple.png" class="image" alt="" style="width: 100%;"></div></a>
+						<a href="/pages/portfolio/apple_store/index.html"><div class="card-example image rounded element-anim"><img src="img/project-apple.png" class="image" alt="" style="width: 100%;"></div></a>
 						<a href="#"><div class="card-example image rounded element-anim"><h4>Work In Progress <span class="loading">.</span></h4></div></a>
 						<a href="#"><div class="card-example image rounded element-anim"><h4>Work In Progress <span class="loading">.</span></h4></div></a>
 						<a href="#"><div class="card-example image rounded element-anim"><h4>Work In Progress <span class="loading">.</span></h4></div></a>
@@ -104,8 +104,8 @@
 						<h2 class="text-white">JavaScript</h2>
 					</div>
 					<div class="skill-card rounded text-center image element-anim">
-						<img src="img/icons/php.png" alt="PHP">
-						<h2 class="text-white">PHP</h2>
+						<img src="img/icons/python.png" alt="Python">
+						<h2 class="text-white">Python</h2>
 					</div>
 					<div class="skill-card rounded text-center image element-anim">
 						<img src="img/icons/react.png" alt="React">
